WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229665
REGRESSION(
r277763
): [Debug][GLib] fast/mediastream timeouts
https://bugs.webkit.org/show_bug.cgi?id=229665
Summary
REGRESSION(r277763): [Debug][GLib] fast/mediastream timeouts
Philippe Normand
Reported
2021-08-30 02:16:29 PDT
The following tests are timing out only in Debug, since
r277763
(see for instance
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2Fget-user-media-device-id.html
): fast/mediastream/constraint-intrinsic-size.html [ Timeout ] fast/mediastream/get-user-media-device-id.html [ Timeout ] fast/mediastream/getDisplayMedia-frame-rate.html [ Timeout ] fast/mediastream/getDisplayMedia-max-constraints1.html [ Timeout ] fast/mediastream/getDisplayMedia-max-constraints2.html [ Timeout ] fast/mediastream/getDisplayMedia-max-constraints3.html [ Timeout ] fast/mediastream/screencapture-user-gesture.html [ Timeout ] webrtc/h264-high.html [ Timeout ] I suspect bad handling of the PixelBuffer in the samples created by the mock video source... Or an issue with the Cairo backend.
Attachments
Patch
(5.64 KB, patch)
2021-08-31 09:15 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-08-30 02:27:08 PDT
Expectations updated in
r281753
.
Philippe Normand
Comment 2
2021-08-31 09:15:45 PDT
Created
attachment 436893
[details]
Patch
EWS
Comment 3
2021-09-02 07:50:11 PDT
Committed
r281921
(
241230@main
): <
https://commits.webkit.org/241230@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436893
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug