REGRESSION(r277763): [Debug][GLib] fast/mediastream timeouts https://bugs.webkit.org/show_bug.cgi?id=229665

Patch by Philippe Normand <pnormand@igalia.com> on 2021-09-02
Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

The tests were timing out in Debug because of the unaccelerated PixelBuffer conversions
triggered from the GStreamer mock video source. Making the AlphaPremultiplication value
match between the source and destination buffers allows us to skip this expensive
conversion. A memcpy is now done if the source and destination parameters match, there is no
need to do pixel-per-pixel copies in this case.

* platform/graphics/PixelBufferConversion.cpp:
(WebCore::convertImagePixels):
* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockRealtimeVideoSourceGStreamer::updateSampleBuffer):

LayoutTests:

* platform/glib/TestExpectations: Update expectations, some tests pass now, apart from two
getDisplayMedia tests, to be handled in another patch.

Canonical link: https://commits.webkit.org/241230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281921 268f45cc-cd09-0410-ab3c-d52691b4dbfc